Fix compilation error with static builds

A recent changes did not include the feature check for the css parser
leading to compilation error.

Fixes: QTBUG-131335
Change-Id: I4c45c7d17a3077aa6e070837f93ff40f01a9f9f2
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>